--- a/web/Home.html
+++ b/web/Home.html
@@ -1,280 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAWS Home Page</title>
+    <title>PAWS Home</title>
 
     <style>
         body{
+            background-color:#FAF9F6;
             margin:0;
             padding:0;
-            font-family: 'Poppins', sans-serif;
-            background: url('fur-bg.jpg') center/cover no-repeat fixed;
+            font-family:banschrift, sans-serif;
         }
 
-    /* ---------------- NAVBAR ---------------- */
-        .navbar{
-            width: 90%;
-            margin: 15px auto; 
-            background: #58cf96; /* your exact green */
-            padding: 10px 40px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-
-            border-radius: 50px;  /* rounded like your design */
-            box-shadow: 0px 4px 12px rgba(0,0,0,0.15);
-
-            position: sticky;
-            top: 15px;
-            z-index: 100;
-         }
-
-        .navbar-left img{
-            height: 55px;
-         }
-
-        /* Navbar links */
-        .navbar-right a{
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: 400;
-            color: white; /* matches picture */
-            padding: 8px 14px;
-            border-radius: 25px;
-            transition: all 0.3s ease;
-            font-size: 17px;
+        table{
+            width:100%;
+            border-collapse:collapse;
+        }
+        .header-row{
+            background-color:#cccccc;
+            border:none;
+        }
+        .header-cell{
+            padding:20px 40px;
+            border:none;
+            white-space: nowrap;
+        }
+        .header-cell:hover{
+            color:#848484;
+        }
+        .paws-logo {
+             height: 48px;
+        }
+        .menu{
+            background-color:#cccccc;
         }
 
-        /* Hover effect */
-        .navbar-right a:hover{
-            background: #cb6ce6;
-            transform: translateY(-3px);
+        #paws{
+            text-align:left;
+            font-size:40px;
+            background-color:#FAF9F6;
         }
 
-        /* ---------------- HERO SECTION ---------------- */
-        .hero{
+        a{
+            text-decoration:none;
+            color:black;
+        }
+
+        a:hover{
+            color:#848484;
+        }
+
+        .content-container{
+            width:100%;
             text-align:center;
-            padding: 120px 20px 60px 20px;
+            margin-top:60px;
         }
 
-        .hero img{
-            width: 700px;
+
+        .home-main-image{
+            width: 650px;    /* adjust size as needed */
             max-width: 90%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
         }
-
-        .button-row{
+		
+		.button-row{
             display: flex;
             justify-content: center;
-            gap: 25px;
+            gap: 20px;
             margin-top: 40px;
-            flex-wrap: wrap;
         }
 
         .home-btn{
-            padding: 16px 32px;
-            background: #FF7EDB;
+            padding: 15px 28px;
+            background-color: #f5a0c8;
             border: none;
-            border-radius: 30px;
+            border-radius: 25px;
             font-size: 18px;
             cursor: pointer;
-            font-weight: 600;
-            color: white;
-            box-shadow: 0px 4px 10px rgba(0,0,0,0.15);
-            transition: all 0.3s;
+            font-weight: bold;
+            transition: 0.3s ease;
         }
 
         .home-btn:hover{
-            background:#e046ad;
-            transform: translateY(-5px);
+            background-color: #e48ab3;
         }
-
-        /* ---------------- FEATURE SECTIONS ---------------- */
-
-        .section {
-            text-align: center;
-            padding: 80px 60px;
-        }
-
-        .section h2{
-            font-size: 36px;
-            color: #333;
-            margin-bottom: 20px;
-        }
-
-        .section p{
-            font-size: 18px;
-            color: #444;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        /* Why Adopt */
-        .why-grid{
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 35px;
-            margin-top: 40px;
-        }
-
-        .why-card{
-            background:white;
-            padding: 30px;
-            border-radius: 25px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-            transition: 0.3s;
-        }
-
-        .why-card:hover{
-            transform: translateY(-10px);
-        }
-
-        .why-card img{
-            height: 80px;
-            margin-bottom: 15px;
-        }
-
-        /* Featured Pets */
-        .pet-grid{
-            display: flex;
-            justify-content: center;
-            gap: 40px;
-            flex-wrap: wrap;
-            margin-top: 40px;
-        }
-
-        .pet-card{
-            width: 260px;
-            background:white;
-            padding: 20px;
-            border-radius: 20px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-            transition: 0.3s;
-        }
-
-        .pet-card:hover{
-            transform: scale(1.05);
-        }
-
-        .pet-card img{
-            width: 100%;
-            border-radius: 15px;
-            height: 180px;
-            object-fit: cover;
-        }
-
-        .pet-card h4{
-            margin-top: 10px;
-        }
-
-        /* Footer */
-        .footer{
-            text-align:center;
-            background:#644d4d;
-            color:white;
-            padding: 25px 10px;
-            margin-top: 60px;
-        }
-
     </style>
 </head>
 
 <body>
+<table class="header-row">
+    <tr>
+        <th id="paws" class="header-cell" colspan="6">
+            <a href='Home.html'>
+                <img src="PAWS.png" alt="PAWS" class="paws-logo">
+            </a>
+        </th>
+    </tr>
+    <tr class="menu">
+        <th class="header-cell" style="width:60%"></th>
+        <th class="header-cell"><a href="Home.html">Home</a></th>
+        <th class="header-cell"><a href="AboutUs.html">About</a></th>
+        <th class="header-cell"><a href="AdopterSignin.html">Sign In</a></th>
+        <th class="header-cell"><a href="LogInStaff.html">For Staff</a></th>
+    </tr>
+</table>
 
-<!-- NAVIGATION BAR -->
-<div class="navbar">
-    <div class="navbar-left">
-        <a href="Home.html">
-            <img src="PAWS.png" alt="PAWS Logo">
-        </a>
+<div class="content-container">
+
+    <img src="pawsHome.png" class="home-main-image" alt="PAWS Home">
+	
+	<div class="button-row">
+        <a href="AdopterSignin.html"><button class="home-btn">Join Our Adopter Community!</button></a>
+        <a href="Rehome.html"><button class="home-btn">Meet Our Pets</button></a>
+		<a href="LogInStaff.html"><button class="home-btn">Access Staff Page</button></a>
     </div>
 
-    <div class="navbar-right">
-        <a href="Home.html">Home</a>
-        <a href="AboutUs.html">About</a>
-        <a href="Rehome.html">Rehome</a>
-        <a href="AdopterSignin.html">Sign In</a>
-        <a href="LogInStaff.html">Staff</a>
-    </div>
 </div>
-
-    <!-- HERO SECTION -->
-    <div class="hero">
-        <img src="pawsHome.png">
-        
-        <div class="button-row">
-            <a href="AdopterSignin.html"><button class="home-btn">Join Our Adopter Community</button></a>
-            <a href="Rehome.html"><button class="home-btn">Rehome Our Pets</button></a>
-            <a href="LogInStaff.html"><button class="home-btn">Staff Access</button></a>
-        </div>
-    </div>
-
-    <!-- MISSION SECTION -->
-    <div class="section">
-        <h2>Our Mission</h2>
-        <p>
-            PAWS is committed to rescuing animals, providing them with shelter, care, and a second chance.
-            Every adoption helps us continue our mission of giving hope, love, and forever homes.
-        </p>
-    </div>
-
-    <!-- WHY ADOPT SECTION -->
-    <div class="section" style="background:white;">
-        <h2>Why Adopt From Us?</h2>
-
-        <div class="why-grid">
-            <div class="why-card">
-                <img src="icon1.png">
-                <h3>Healthy & Vaccinated Pets</h3>
-                <p>All animals receive proper medical care, vaccinations, and sterilization before adoption.</p>
-            </div>
-
-            <div class="why-card">
-                <img src="icon2.png">
-                <h3>Trusted & Loving Shelter</h3>
-                <p>We ensure each pet is cared for with compassion and comfort while waiting for a new home.</p>
-            </div>
-
-            <div class="why-card">
-                <img src="icon3.png">
-                <h3>Easy Adoption Process</h3>
-                <p>Our step-by-step adoption process is simple, guided, and stress-free.</p>
-            </div>
-        </div>
-    </div>
-
-    <!-- FEATURED PETS SECTION -->
-    <div class="section">
-        <h2>Our Lovely Pets</h2>
-
-        <div class="pet-grid">
-
-            <div class="pet-card">
-                <img src="sample_pet1.jpg" alt="Pet 1">
-                <h4>Bella • 2 years</h4>
-                <p>A gentle and calm sweetheart who loves cuddles.</p>
-            </div>
-
-            <div class="pet-card">
-                <img src="sample_pet2.jpg" alt="Pet 2">
-                <h4>Milo • 1 year</h4>
-                <p>Playful, energetic, and ready for adventure!</p>
-            </div>
-
-            <div class="pet-card">
-                <img src="sample_pet3.jpg" alt="Pet 3">
-                <h4>Luna • 3 years</h4>
-                <p>Affectionate and friendly with both pets and people.</p>
-            </div>
-
-        </div>
-    </div>
-
-    <!-- FOOTER -->
-    <div class="footer">
-        © 2025 PAWS Pet Adoption Welfare System — All Rights Reserved
-    </div>
 
 </body>
 </html>
+
