Main & Adopter Navbar/Footer Fix

--- a/web/AboutUs.html
+++ b/web/AboutUs.html
@@ -82,26 +82,27 @@
             margin-bottom:40px;
         }
     </style>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-<table class="header-row">
-    <tr>
-        <th id="paws" class="header-cell" colspan="6">
-                    <a href='Home.html'>
-                        <img src="PAWS.png" alt="PAWS" class="paws-logo">
-                    </a>
-                </th>
-    </tr>
-    <tr class="menu">
-        <th class="header-cell" style="width:60%"></th>
-        <th class="header-cell"><a href="Home.html">Home</a></th>
-        <th class="header-cell"><a href="AboutUs.html">About</a></th>
-        <th class="header-cell"><a href="AdopterSignin.html">Sign In</a></th>
-        <th class="header-cell"><a href="AdopterLogin.html">Log In</a></th>
-    </tr>
-</table>
+<div class="navbar">
+    <div class="navbar-left">
+        <a href="Home.html">
+            <img src="PAWS.png" alt="PAWS Logo">
+        </a>
+    </div>
+
+    <div class="navbar-right">
+        <a href="Home.html">Home</a>
+        <a href="AboutUs.html">About</a>
+        <a href="Rehome.html">Rehome</a>
+        <a href="AdopterSignin.html">Sign In</a>
+        <a href="LogInStaff.html">Staff</a>
+    </div>
+</div>
 
 <!-- PAGE CONTENT -->
 <div id="content">
@@ -124,5 +125,10 @@
 
 </div>
 
+<div class="footer">
+        © 2025 PAWS Pet Adoption Welfare System — All Rights Reserved
+</div>
+
 </body>
+
 </html>
