--- a/web/AdopterSignin.html
+++ b/web/AdopterSignin.html
@@ -143,26 +143,26 @@
             background:#999;
         }
     </style>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
 
 <div class="navbar">
-        <div class="nav-top">
-            <div class="nav-left">
-				<a href="Home.html">
-                <img src="pawsA.png" alt="PAWS Adopter" style="height:48px;"></a>
-            </div>
+    <div class="navbar-left">
+        <a href="Home.html">
+            <img src="PAWS.png" alt="PAWS Logo">
+        </a>
+    </div>
 
-            
-        </div>
-
-        <div class="menu-links">
-            <a href="Home.html">HOME</a>
-            <a href="AboutUs.html">ABOUT</a>
-            <a href="AdopterSignIn.html">SIGN IN</a>
-            <a href="AdopterLogin.html">LOG IN</a>
-        </div>
+    <div class="navbar-right">
+        <a href="Home.html">Home</a>
+        <a href="AboutUs.html">About</a>
+        <a href="Rehome.html">Rehome</a>
+        <a href="AdopterSignin.html">Sign In</a>
+        <a href="AdopterLogin.html">Log In</a>
+    </div>
 </div>
 
 <div id="heading">Adopter Sign In</div>
@@ -212,6 +212,10 @@
 	<a href="AdopterLogin.html">
     <button class="btn">SIGN IN</button></a>
 </div>
+
+    <div class="footer">
+     © 2025 PAWS Pet Adoption Welfare System -- All Rights Reserved
+    </div>
 
 </body>
 </html>
