--- a/web/Profile.html
+++ b/web/Profile.html
@@ -125,34 +125,33 @@
         }
     }
 </style>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
     <div class="navbar">
 
-        <div class="nav-top">
-            <div class="nav-left">
-                <a href="DashboardA.html">
-                <img src="pawsA.png" alt="PAWS Adopter" style="height:48px;"></a>
-            </div>
+    <div class="navbar-left">
+        <a href="Home.html">
+            <img src="pawsA.png" alt="PAWS Logo">
+        </a>
 
-            <div class="nav-right">
-                <div class="profile-container">
-                    <a href="Profile.html">
-                        <img src="ProfileIcon.png" class="profile-icon">
-                    </a>
-                    <a href="#" class="logout-text">LOG OUT</a>
-                </div>
-            </div>
+        <div class="navbar-links">
+            <a href="Home.html">Home</a>
+            <a href="AboutUs.html">About</a>
+            <a href="DashboardA.html">Dashboard</a>
+            <a href="Rehome.html">Rehome Pet</a>
         </div>
+    </div>
 
-        <div class="menu-links">
-            <a href="Home.html">HOME</a>
-            <a href="AboutUs.html">ABOUT</a>
-            <a href="DashboardA.html">DASHBOARD</a>
-            <a href="Rehome.html">REHOME PET</a>
-        </div>
+    <div class="navbar-profile">
+        <a href="Profile.html">
+            <img src="ProfileIcon.png" alt="Profile" class="profile-icon">
+        </a>
+        <a href="Logout.html" class="logout">LOG OUT</a>
+    </div>
 
     </div>
 
@@ -176,5 +175,9 @@
 
     </div>
 
+    <div class="footer">
+        © 2025 PAWS Pet Adoption Welfare System — All Rights Reserved
+    </div>
+    
 </body>
 </html>
