StaffDashboard Navbar Fix

--- a/web/StaffDashboard.html
+++ b/web/StaffDashboard.html
@@ -104,25 +104,29 @@
                 height: 48px;
             }
         </style>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <table class="header-row">
-            <tr>
-                <th id="paws" class="header-cell" colspan="6">
-                    <a href='Home.html'>
-                        <img src="pawsS.png" alt="PAWS Staff" class="paws-logo">
-                    </a>
-                </th>
-            </tr>
-            <tr class="menu">
-                <th class="header-cell"><a href="ManagePets.html">Pets</a></th>
-                <th class="header-cell"><a href="ManageRecords.html">Records</a></th>
-                <th class="header-cell"><a href="ManageReports.html">Reports</a></th>
-                <th class="header-cell"><a href="ActivityLog.html">Logs</a></th>
-                <th class="header-cell"><a href="ManageApplications.html">Applications</a></th>                
-                <th class="header-cell logout">Log Out</th>
-            </tr>
-        </table>
+ <div class="navbar">
+        <div class="navbar-left">
+            <a href="Home.html">
+                <img src="pawsS.png" alt="PAWS Staff">
+            </a>
+        </div>
+     
+        <div class="navbar-links">
+            <a href="ManagePets.html">Pets</a>
+            <a href="ManageRecords.html">records</a>
+            <a href="ManageReports.html">Reports</a>
+            <a href="ManageApplications.html">Applications</a>
+            <a href="ActivityLog.html">Logs</a>
+        </div>
+     
+         <div class="navbar-profile">
+        <a href="Logout.html" class="logout">LOG OUT</a>
+        </div>
+ </div>
         <table id="manage" >
             <tr>
                 <th>
