--- a/web/AdopterLogin.html
+++ b/web/AdopterLogin.html
@@ -74,7 +74,7 @@
 
         .form-box{
             width:420px;            
-            background:white;
+            background:#d0e6c7;
             padding:25px 35px;      
             border-radius:18px;
             border:1px solid #e0e0e0;
@@ -111,7 +111,7 @@
             padding:9px 20px;       /* smaller button */
             border:none;
             border-radius:8px;
-            background:#b3b3b3;
+            background:#ff66c4;
             color:white;
             font-size:15px;
             cursor:pointer;
