--- a/web/AdopterSignin.html
+++ b/web/AdopterSignin.html
@@ -90,7 +90,7 @@
             max-width:1100px;
             width:80%;
             margin:0 auto 40px auto;      
-            background:white;
+            background:#d0e6c7;
             padding:40px 70px 40px 50px;   
             border-radius:25px;
             border:1px solid #e0e0e0;
@@ -134,7 +134,7 @@
             padding:10px 28px;        
             border:none;
             border-radius:8px;        
-            background:#b3b3b3;
+            background:#ff66c4;
             color:white;
             font-size:16px;           
             cursor:pointer;
