--- a/web/ApplicationForm.html
+++ b/web/ApplicationForm.html
@@ -97,7 +97,7 @@
     }
 
     .form-section {
-        background: #e9e9e9;
+        background: #d0e6c7;
         width: 40%;
         padding: 25px;
         border-radius: 20px;
