--- a/web/EditPets.html
+++ b/web/EditPets.html
@@ -1,128 +1,78 @@
-<html>
+<html>    
+<head>
     <title>Edit Pets</title>
-    <head>
-        <style>
-            body{
-                background-color:#FAF9F6;
-                font-family:banschrift, sans-serif;
-                margin:0;
-                padding:0;
-            }
-            .nav-top {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-            }
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
-            .nav-left {
-                display: flex;
-                align-items: center;
-                gap: 20px;
-            }
-            .paws-logo {
-                height: 48px;
-            }
-            #paws{
-                text-align:left;
-                font-size:40px;
-                background-color:FAF9F6;
-            }
-            #heading{
-                font-size:30px;
-                padding-left:60px;
-                padding-top:20px;
-                width:95%;
-                margin-left:auto;
-                margin-right:auto;
-                margin-top:40px;
-                margin-bottom:10px;
-                
-            }
-            form {
-                width: 400px;           
-                margin: 40px auto;      
-                padding: 20px;
-                border: 1px solid #ccc;
-                border-radius: 10px;
-                box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            }
-            table{
-                font-family:banschrift, sans-serif;
-                width:100%;
-                border-collapse:collapse;
-            }
-            .header-row{
-                background-color:#cccccc;
-                border:none;
-            }
-            .header-cell{
-                padding:20px 40px;
-                border:none;
-                white-space: nowrap;
-            }
-            .header-cell:hover{
-                color:#848484;
-            }
-            .logout {
-                text-align:right;
-                width:100%;
-            }
-            .logout:hover {
-                color:darkred;
-            }
-            a{
-                text-align: center;
-                text-decoration: none;
-            }
-            a:hover{
-                    color: #848484;
-            }
-            a:link {
-                color: black;      
-                text-decoration: none;
-            }
-            a:visited {
-                color: black;      
-            }
-            a:hover {
-                color: #848484;    
-            }
-            a:active {
-                color: #666666;
-            }
-        </style>
-    </head>
-    <body>
-        <table class="header-row">
-            <tr>
-                <th id="paws" class="header-cell" colspan="6">
-                    <a href='StaffDashboard.html'>
-                        <img src="pawsS.png" alt="PAWS Staff" class="paws-logo">
-                    </a>
-                </th>
-            </tr>
-            <tr class="menu">
-                <th class="header-cell"><a href="ManagePets.html">Pets</a></th>
-                <th class="header-cell"><a href="ManageRecords.html">Records</a></th>
-                <th class="header-cell"><a href="ManageReports.html">Reports</a></th>
-                <th class="header-cell"><a href="ActivityLog.html">Logs</a></th>
-                <th class="header-cell"><a href="ManageApplications.html">Applications</a></th>                
-                <th class="header-cell logout">Log Out</th>
-            </tr>
-        </table>
-        <table id="heading" >
-            <tr>
-                <th>Edit Pet Details</th>
-            </tr>
-        </table>
+<body>
+
+<div class="navbar">
+    <div class="navbar-left">
+        <a href="Home.html">
+            <img src="pawsS.png" alt="PAWS Staff">
+        </a>
+    
+
+    <div class="navbar-links">
+        <a href="StaffDashboard.html">Dashboard</a>
+        <a href="ManagePets.html">Pets</a>
+        <a href="ManageRecords.html">Records</a>
+        <a href="ManageReports.html">Reports</a>
+        <a href="ManageApplications.html">Applications</a>
+        <a href="ActivityLog.html">Logs</a>
+    </div>
+    <div class="navbar-right">
+        <a href="Logout.html" class="logout">Log Out</a>
+    </div>
+</div>
+</div>
+
+<div class="form-wrapper">
+    <div class="form-card">
+
+        <h2>Edit Pet Details</h2>
+
         <form action="editPetsServlet" method="post">
-            Name: <input type="text" name="name" required><br><br>
-            Species: <input type="radio" name="species" value="cat">Cat<input type="radio" name="species" value="dog">Dog<br><br>
-            Breed: <input type="text" name="breed" required><br><br>
-            Age: <input type="text" name="age" required><br><br>
-            Gender: <input type="radio" name="gender" value="male">Male<input type="radio" name="gender" value="female">Female<br><br>
-            Colour: <input type="text" name="colour" required><br><br>
-            <input type="submit" value ="Update Pet">
+
+            <label>Name</label>
+            <input type="text" name="name" required>
+
+            <label>Species</label>
+            <div class="radio-group">
+                <label>
+                    <input type="radio" name="species" value="cat"> Cat
+                </label>
+                <label>
+                    <input type="radio" name="species" value="dog"> Dog
+                </label>
+            </div>
+
+            <label>Breed</label>
+            <input type="text" name="breed" required>
+
+            <label>Age</label>
+            <input type="text" name="age" required>
+
+            <label>Gender</label>
+            <div class="radio-group">
+                <label>
+                    <input type="radio" name="gender" value="male"> Male
+                </label>
+                <label>
+                    <input type="radio" name="gender" value="female"> Female
+                </label>
+            </div>
+
+            <label>Colour</label>
+            <input type="text" name="colour" required>
+
+            <button type="submit">Update Pet</button>
+
         </form>
-    </body>
+
+    </div>
+</div>
+
+</body>
 </html>
