--- a/web/ManagePets.html
+++ b/web/ManagePets.html
@@ -1,160 +1,79 @@
 <html>
+<head>
     <title>Manage Pets</title>
-    <head>
-        <style>
-            body{
-                background-color:#FAF9F6;
-                font-family:banschrift, sans-serif;
-                margin:0;
-                padding:0;
-            }
-            .nav-top {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-            }
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
-            .nav-left {
-                display: flex;
-                align-items: center;
-                gap: 20px;
-            }
-            .paws-logo {
-                height: 48px;
-            }
-            #paws{
-                text-align:left;
-                font-size:40px;
-                background-color:FAF9F6;
-            }
-            #heading{
-                font-size:30px;
-                padding-left:60px;
-                padding-top:20px;
-                width:95%;
-                margin-left:auto;
-                margin-right:auto;
-                margin-top:10px;
-                margin-bottom:10px;
-                
-            }
-            #view{
-                width:95%;
-                padding:10px;
-                margin-left: auto;
-                margin-right: auto;
-            }
-            #view th{
-                font-size:20px;
-            }
-            .sub{
-                font-size:16px;
-                margin-top:10px;
-                padding-bottom:20px;
-                font-weight:normal;
-            }
-            table{
-                font-family:banschrift, sans-serif;
-                width:100%;
-                border-collapse:collapse;
-            }
-            #desc{
-                text-align:center;
-                padding-bottom:50px;
-            }
-            .header-row{
-                background-color:#cccccc;
-                border:none;
-            }
-            .header-cell{
-                padding:20px 40px;
-                border:none;
-                white-space: nowrap;
-            }
-            .header-cell:hover{
-                color:#848484;
-            }
-            .logout {
-                text-align:right;
-                width:100%;
-            }
-            .logout:hover {
-                color:darkred;
-            }
-            a{
-                text-align: center;
-                text-decoration: none;
-            }
-            a:hover{
-                    color: #848484;
-            }
-            a:link {
-                color: black;      
-                text-decoration: none;
-            }
-            a:visited {
-                color: black;      
-            }
-            a:hover {
-                color: #848484;    
-            }
-            a:active {
-                color: #666666;
-            }
-        </style>
-    </head>
-    <body>
-        <table class="header-row">
-            <tr>
-                <th id="paws" class="header-cell" colspan="6">
-                    <a href='StaffDashboard.html'>
-                        <img src="pawsS.png" alt="PAWS Staff" class="paws-logo">
-                    </a>
-                </th>
-            </tr>
-            <tr class="menu">
-                <th class="header-cell"><a href="ManagePets.html">Pets</a></th>
-                <th class="header-cell"><a href="ManageRecords.html">Records</a></th>
-                <th class="header-cell"><a href="ManageReports.html">Reports</a></th>
-                <th class="header-cell"><a href="ActivityLog.html">Logs</a></th>
-                <th class="header-cell"><a href="ManageApplications.html">Applications</a></th>                
-                <th class="header-cell logout">Log Out</th>
-            </tr>
-        </table>
-        <table id="heading" >
-            <tr>
-                <th style="text-align:left;">Pets Management</th>
-                <th ><a href="AddPets.html">Add Pets</a></th>
-            </tr>
-        </table>
-        <table id="view" border="1">
-            <tr>
-                <th>
-                    View Pets
-                </th>
-                <th>Action</th>
-            </tr>
-            <tr>
-                <td style="text-align:center;">Pet 1</td>
-                <td style="text-align:center;">
-                    <a href="EditPets.html">Edit</a><br>                     
-                    <a href="#" style="text-align:center;">Delete</a>                                      
-				</td>
-            </tr>
-            <tr>
-                <td style="text-align:center;">Pet 2</td>
-                <td style="text-align:center;">
-                    <a href="EditPets.html">Edit</a><br>                     
-                    <a href="#" style="text-align:center;">Delete</a>                      
-                </td>                
-            </tr>
-            <tr>
-                <td style="text-align:center;">Pet 3</td>
-                <td style="text-align:center;">
-                    <a href="EditPets.html">Edit</a><br>                     
-                    <a href="#" style="text-align:center;">Delete</a>                      
-                </td>                
-            </tr>
-        </table>
-    </body>
+<body>
+
+<div class="navbar">
+    <div class="navbar-left">
+        <a href="Home.html">
+            <img src="pawsS.png" alt="PAWS Staff">
+        </a>
+    </div>
+
+    <div class="navbar-links">
+        <a href="StaffDashboard.html">Dashboard</a>
+        <a href="ManagePets.html">Pets</a>
+        <a href="ManageRecords.html">Records</a>
+        <a href="ManageReports.html">Reports</a>
+        <a href="ManageApplications.html">Applications</a>
+        <a href="ActivityLog.html">Logs</a>
+        <a href="Logout.html" class="logout">LOG OUT</a>
+    </div>
+</div>
+
+<!-- ===== PAGE HEADER ===== -->
+<div class="page-header">
+    <h2>Pets Management</h2>
+    <a href="AddPets.html" class="bttn">Add Pets</a>
+</div>
+
+<!-- ===== PET INFO CARDS STACKED ===== -->
+<div class="info-stack">
+
+    <div class="info-card">
+        <h3>Pet 1</h3>
+        <p>Species: Cat</p>
+        <p>Breed: Persian</p>
+        <p>Age: 2 years</p>
+        <p>Gender: Female</p>
+        <p>Colour: White</p>
+        <div class="card-actions">
+            <a href="EditPets.html" class="bttn">Edit</a>
+            <a href="#" class="bttn">Delete</a>
+        </div>
+    </div>
+
+    <div class="info-card">
+        <h3>Pet 2</h3>
+        <p>Species: Dog</p>
+        <p>Breed: Labrador</p>
+        <p>Age: 3 years</p>
+        <p>Gender: Male</p>
+        <p>Colour: Black</p>
+        <div class="card-actions">
+            <a href="EditPets.html" class="bttn">Edit</a>
+            <a href="#" class="bttn">Delete</a>
+        </div>
+    </div>
+
+    <div class="info-card">
+        <h3>Pet 3</h3>
+        <p>Species: Dog</p>
+        <p>Breed: Beagle</p>
+        <p>Age: 1 year</p>
+        <p>Gender: Male</p>
+        <p>Colour: Brown</p>
+        <div class="card-actions">
+            <a href="EditPets.html" class="bttn">Edit</a>
+            <a href="#" class="bttn">Delete</a>
+        </div>
+    </div>
+
+</div>
+
+</body>
 </html>
