--- a/web/AboutUs.html
+++ b/web/AboutUs.html
@@ -99,8 +99,8 @@
         <a href="Home.html">Home</a>
         <a href="AboutUs.html">About</a>
         <a href="Rehome.html">Rehome</a>
-        <a href="AdopterSignin.html">Sign In</a>
-        <a href="LogInStaff.html">Staff</a>
+        <a href="AdopterSignin.jsp">Sign In</a>
+        <a href="LogInStaff.jsp">Staff</a>
     </div>
 </div>
 
