Application Adopter Fix

--- a/web/Home.html
+++ b/web/Home.html
@@ -24,9 +24,9 @@
     <div class="navbar-right">
         <a href="Home.html">Home</a>
         <a href="AboutUs.html">About</a>
-        <a href="Rehome.html">Rehome</a>
-        <a href="AdopterSignin.html">Sign In</a>
-        <a href="LogInStaff.html">Staff</a>
+        <a href="Rehome.jsp">Rehome</a>
+        <a href="AdopterSignin.jsp">Sign In</a>
+        <a href="LogInStaff.jsp">Staff</a>
     </div>
 </div>
 
@@ -35,9 +35,9 @@
         <img src="pawsHome.png">
         
         <div class="button-row">
-            <a href="AdopterSignin.html"><button class="home-btn">Join Our Adopter Community</button></a>
-            <a href="Rehome.html"><button class="home-btn">Rehome Our Pets</button></a>
-            <a href="LogInStaff.html"><button class="home-btn">Staff Access</button></a>
+            <a href="AdopterSignin.jsp"><button class="home-btn">Join Our Adopter Community</button></a>
+            <a href="Rehome.jsp"><button class="home-btn">Rehome Our Pets</button></a>
+            <a href="LogInStaff.jsp"><button class="home-btn">Staff Access</button></a>
         </div>
     </div>
 
