--- a/web/Home.html
+++ b/web/Home.html
@@ -56,51 +56,25 @@
 
         <div class="why-grid">
             <div class="why-card">
-                <img src="icon1.png">
+                <img src="healthypets.jpg">
                 <h3>Healthy & Vaccinated Pets</h3>
                 <p>All animals receive proper medical care, vaccinations, and sterilization before adoption.</p>
             </div>
 
             <div class="why-card">
-                <img src="icon2.png">
+                <img src="loving.jpg">
                 <h3>Trusted & Loving Shelter</h3>
                 <p>We ensure each pet is cared for with compassion and comfort while waiting for a new home.</p>
             </div>
 
             <div class="why-card">
-                <img src="icon3.png">
+                <img src="easy.jpg">
                 <h3>Easy Adoption Process</h3>
                 <p>Our step-by-step adoption process is simple, guided, and stress-free.</p>
             </div>
         </div>
     </div>
 
-    <!-- FEATURED PETS SECTION -->
-    <div class="section">
-        <h2>Our Lovely Pets</h2>
-
-        <div class="pet-grid">
-
-            <div class="pet-card">
-                <img src="sample_pet1.jpg" alt="Pet 1">
-                <h4>Bella • 2 years</h4>
-                <p>A gentle and calm sweetheart who loves cuddles.</p>
-            </div>
-
-            <div class="pet-card">
-                <img src="sample_pet2.jpg" alt="Pet 2">
-                <h4>Milo • 1 year</h4>
-                <p>Playful, energetic, and ready for adventure!</p>
-            </div>
-
-            <div class="pet-card">
-                <img src="sample_pet3.jpg" alt="Pet 3">
-                <h4>Luna • 3 years</h4>
-                <p>Affectionate and friendly with both pets and people.</p>
-            </div>
-
-        </div>
-    </div>
 
     <div class="footer">
         © 2025 PAWS Pet Adoption Welfare System — All Rights Reserved
