--- a/web/AboutUs.html
+++ b/web/AboutUs.html
@@ -90,13 +90,13 @@
 
 <div class="navbar">
     <div class="navbar-left">
-        <a href="Home.html">
+        <a href="Home.jsp">
             <img src="PAWS.png" alt="PAWS Logo">
         </a>
     </div>
 
     <div class="navbar-right">
-        <a href="Home.html">Home</a>
+        <a href="Home.jsp">Home</a>
         <a href="AboutUs.html">About</a>
         <a href="Rehome.jsp">Rehome</a>
         <a href="AdopterSignin.jsp">Sign In</a>
@@ -126,7 +126,7 @@
 </div>
 
 <div class="footer">
-        © 2025 PAWS Pet Adoption Welfare System — All Rights Reserved
+        © 2025 PAWS Pet Adoption Welfare System
 </div>
 
 </body>
